modification key kubeconfig

--- a/.github/workflows/maven-build-and-test.yml
+++ b/.github/workflows/maven-build-and-test.yml
@@ -121,7 +121,7 @@ jobs:
   #         kubectl apply -f - -n dev
 
   AWS_deploy:
-    # needs: build-and push
+    # needs: build-and-push
     runs-on: ubuntu-latest
 
     steps:
