--- a/.github/workflows/maven-build-and-test.yml
+++ b/.github/workflows/maven-build-and-test.yml
@@ -78,6 +78,7 @@ jobs:
         path: ${{ steps.msdo.outputs.sarifFile }}
       
   build-and-push:
+    #build image and push
     needs: secure
     runs-on: ubuntu-latest
 
@@ -106,8 +107,8 @@ jobs:
     - name: Build and Push Docker Images
       run: mvn spring-boot:build-image -Pk8s -DREPOSITORY_PREFIX=${{ secrets.DOCKERHUB_ID }} && ./scripts/pushImages.sh
   
-  update-push:
-    #needs: build-and-push
+  clone-and-push:
+    #needs: clone-and-push
     name: Clone update and Push
     runs-on: ubuntu-latest
     steps:
