--- a/.github/workflows/maven-build-and-test.yml
+++ b/.github/workflows/maven-build-and-test.yml
@@ -117,7 +117,7 @@ jobs:
       uses: MrSquaare/ssh-setup-action@v1
       with:
           host: github.com
-          private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+          private-key: ${{ secrets.ID_RSA }}
           
     - name: Clone repository
       run: |
