--- a/.github/workflows/maven-build-and-test.yml
+++ b/.github/workflows/maven-build-and-test.yml
@@ -116,8 +116,8 @@ jobs:
       uses: MrSquaare/ssh-setup-action@v1
       with:
           host: github.com
-          private-key: ${{ secrets.id_rsa }}
-          
+         # private-key: ${{ secrets.id_rsa }}
+          private-key: ${{ secrets.SSH_PRIVATE_KEY }}          
     - name: Clone repository
       run: |
         rm -Rf *
