--- a/.github/workflows/maven-build-and-test.yml
+++ b/.github/workflows/maven-build-and-test.yml
@@ -51,7 +51,7 @@ jobs:
     runs-on: windows-latest
     steps:
       # Checkout your code repository to scan
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v3
       # Run analyzers
     - name: Run Microsoft Security DevOps Analysis
       uses: microsoft/security-devops-action@latest
@@ -66,10 +66,10 @@ jobs:
 
       # Upload alerts to the Security tab
     - name: Upload alerts to Security tab
-      uses: github/codeql-action/upload-sarif@v3
+      uses: github/codeql-action/upload-sarif@v2
       with:
-        sarif_file: ${{ steps.msdo.outputs.sarifFile }}
-
+       # sarif_file: ${{ steps.msdo.outputs.sarifFile }}
+        sarif_file: results.sarif
       # Upload alerts file as a workflow artifact
     - name: Upload alerts file as a workflow artifact
       uses: actions/upload-artifact@v3
