--- a/.github/workflows/maven-build-and-test.yml
+++ b/.github/workflows/maven-build-and-test.yml
@@ -48,7 +48,8 @@ jobs:
     name: Microsoft Security DevOps Analysis
     # MSDO runs on windows-latest.
     # ubuntu-latest also supported
-    runs-on: windows-latest
+    # windows-latest
+    runs-on: ubuntu-latest
     steps:
       # Checkout your code repository to scan
     - uses: actions/checkout@v3
@@ -107,7 +108,7 @@ jobs:
       run: mvn spring-boot:build-image -Pk8s -DREPOSITORY_PREFIX=${{ secrets.DOCKERHUB_ID }} && ./scripts/pushImages.sh
   
   clone-and-push:
-    #needs: clone-and-push
+    needs: build-and-push
     name: Clone update and Push
     runs-on: ubuntu-latest
     steps:
