--- a/.github/workflows/maven-build-and-test.yml
+++ b/.github/workflows/maven-build-and-test.yml
@@ -49,16 +49,17 @@ jobs:
     # MSDO runs on windows-latest.
     # ubuntu-latest also supported
     # windows-latest
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       # Checkout your code repository to scan
     - uses: actions/checkout@v3
       # Run analyzers
     - name: Run Microsoft Security DevOps Analysis
-      uses: microsoft/security-devops-action@latest
+    #  uses: microsoft/security-devops-action@latest
+    - uses: ./ 
       id: msdo
-#      with:
-#        policy: 'GitHub'
+      with:
+        policy: 'GitHub'
       # config: string. Optional. A file path to an MSDO configuration file ('*.gdnconfig').
       # policy: 'GitHub' | 'microsoft' | 'none'. Optional. The name of a well-known Microsoft policy. If no configuration file or list of tools is provided, the policy may instruct MSDO which tools to run. Default: GitHub.
       # categories: string. Optional. A comma-separated list of analyzer categories to run. Values: 'secrets', 'code', 'artifacts', 'IaC', 'containers. Example: 'IaC,secrets'. Defaults to all.
