--- a/.github/workflows/maven-build-and-test.yml
+++ b/.github/workflows/maven-build-and-test.yml
@@ -56,7 +56,7 @@ jobs:
       # Run analyzers
     - name: Run Microsoft Security DevOps Analysis
     #  uses: microsoft/security-devops-action@latest
-    - uses: ./ 
+      uses: ./ 
       id: msdo
       with:
         policy: 'GitHub'
