--- a/.github/workflows/maven-build-and-test.yml
+++ b/.github/workflows/maven-build-and-test.yml
@@ -55,8 +55,8 @@ jobs:
     - uses: actions/checkout@v3
       # Run analyzers
     - name: Run Microsoft Security DevOps Analysis
-    #  uses: microsoft/security-devops-action@latest
-      uses: ./ 
+      uses: microsoft/security-devops-action@latest
+    #  uses: ./ 
       id: msdo
       with:
         policy: 'GitHub'
