modify setup SSH

--- a/.github/workflows/maven-build-and-test.yml
+++ b/.github/workflows/maven-build-and-test.yml
@@ -118,8 +118,8 @@ jobs:
       uses: MrSquaare/ssh-setup-action@v1
       with:
           host: github.com
-          private-key: ${{ secrets.id_rsa }}
-         # private-key: ${{ secrets.SSH_PRIVATE_KEY }}          
+         # private-key: ${{ secrets.id_rsa }}
+          private-key: ${{ secrets.SSH_PRIVATE_KEY }}          
     - name: Clone repository
       run: |
         rm -Rf *
