--- a/.github/workflows/maven-build-and-test.yml
+++ b/.github/workflows/maven-build-and-test.yml
@@ -134,7 +134,7 @@ jobs:
       run: |
         ls
         cd spring-petclinic-cloud-deployment
-        git config --global user.name "Afayapascal"
+        git config --global user.name "pfokam@afaya-it.com"
         git add -A
         git commit -m "mis à jour de l'image avec le tag ${GITHUB_SHA}"
         git push origin master
