--- a/.github/workflows/maven-build-and-test.yml
+++ b/.github/workflows/maven-build-and-test.yml
@@ -70,7 +70,8 @@ jobs:
 
    deploy:
      needs: build-and-push
-     runs-on: self-hosted
+#     runs-on: self-hosted
+     runs-on: ubuntu-latest
 
      steps:
      - name: Checkout repository
