--- a/.github/workflows/maven-build-and-test.yml
+++ b/.github/workflows/maven-build-and-test.yml
@@ -121,7 +121,7 @@ jobs:
 #           sed "s#\${REPOSITORY_PREFIX}#${{ secrets.DOCKERHUB_ID }}#g" | \
 #           kubectl apply -f - -n dev
    AWS_deploy:
-     needs: build-and-push 15
+     needs: build-and-push
      runs-on: ubuntu-latest
 
      steps:
